@@ -100,6 +100,13 @@ class gettext_reader {
    * @param boolean enable_cache Enable or disable caching of strings (default on)
    */
   function gettext_reader($Reader, $enable_cache = true) {
+  	$machine = @shell_exec('uname -m');
+  	
+  	$enabled64Bits = false;
+  	if ($machine == 'x86_64') {
+  		$enabled64Bits = true;
+  	}
+  	
     // If there isn't a StreamReader, turn on short circuit mode.
     if (! $Reader || isset($Reader->error) ) {
       $this->short_circuit = true;
